--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<header>
+
+    <h1>WEB Desitions</h1>
+
+    <nav>
+        <a></a>
+        <a></a>
+        <a></a>
+        <a></a>
+    </nav>
+
+
+</header>
+
 <body>
     
 </body>
