--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>My PORTFOLIO!</title>
     <link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
-
-<header>
-
-    <h1>WEB Desitions</h1>
-
-    <nav>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-    </nav>
-
-
-</header>
-
 <body>
+    <header>
+
+        <h1>WEB Decisions</h1>
+
+        <nav>
+            <a></a>
+            <a></a>
+            <a></a>
+            <a></a>
+        </nav>
+
+
+    </header>
+
+
     
 </body>
 </html>
