--- a/index.html
+++ b/index.html
@@ -21,6 +21,38 @@
 
 
     </header>
+    <section>
+
+
+    </section>
+
+    <footer>
+        <h4>Contact Me</h4>
+        <ul>
+
+            <li>
+                206.539.6437
+            </li>
+
+            <li>
+                pirogova.mariia@gmail.com
+            </li>
+
+            <li>
+                GitHub
+            </li>
+
+            <li>
+                Facebook
+            </li>
+            
+            <li>
+                Spotify
+            </li>
+
+        </ul>
+
+    </footer>
 
 
     
