added 3 links into footer tag

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             </li>
 
             <li>
-                GitHub
+                <a href="https://github.com/MaryVPie">GitHub</a>
             </li>
 
             <li>
-                Facebook
+                <a href="https://www.facebook.com/profile.php?id=100004283254961">Facebook</a>
             </li>
-            
+
             <li>
-                Spotify
+                <a href="https://open.spotify.com/user/31hodc7u4u5gitqxuz2vnoentj5y?si=669e49dafec54b0a">Spotify</a>
             </li>
 
         </ul>
