--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PORTFOLIO!</title>
+    <link rel="shortcut icon" type="image/png" href="img/cherry_pie.png">
     <link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 <body>
@@ -39,15 +40,15 @@
             </li>
 
             <li>
-                <a href="https://github.com/MaryVPie">GitHub</a>
+                <a href="https://github.com/MaryVPie" target="_blank">GitHub</a>
             </li>
 
             <li>
-                <a href="https://www.facebook.com/profile.php?id=100004283254961">Facebook</a>
+                <a href="https://www.facebook.com/profile.php?id=100004283254961" target="_blank">Facebook</a>
             </li>
 
             <li>
-                <a href="https://open.spotify.com/user/31hodc7u4u5gitqxuz2vnoentj5y?si=669e49dafec54b0a">Spotify</a>
+                <a href="https://open.spotify.com/user/31hodc7u4u5gitqxuz2vnoentj5y?si=669e49dafec54b0a" target="_blank">Spotify</a>
             </li>
 
         </ul>
