added 4 href elements into a tags in nav tag

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>WEB Decisions</h1>
 
         <nav>
-            <a></a>
-            <a></a>
-            <a></a>
-            <a></a>
+            <a href="#">About Me</a>
+            <a href="#">Work</a>
+            <a href="#">Contact Me</a>
+            <a href="#">Resume</a>
         </nav>
 
 
