added 3 sections and reconstructed the footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
 
-        <h1>WEB Decisions</h1>
+        <h1>WEB Solutions</h1>
 
         <nav>
             <a href="#">About Me</a>
@@ -23,12 +23,18 @@
 
     </header>
     <section>
-
+        <h2>About Me</h2>
 
     </section>
 
-    <footer>
-        <h4>Contact Me</h4>
+    <section>
+        <h2>Work</h2>
+
+    </section>
+
+    <section>
+        <h2>Contact Me</h2>
+
         <ul>
 
             <li>
@@ -52,6 +58,14 @@
             </li>
 
         </ul>
+
+    </section>
+
+    <footer>
+        <h3>Made with ❤️ by Mariia</h3>
+        <p>
+            &copy; 2021 WEB Solutions.
+        </p>
 
     </footer>
 
