created styles for body tag and header + nav tags, uploaded matching classes into html file

--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>My PORTFOLIO!</title>
     <link rel="shortcut icon" type="image/png" href="img/cherry_pie.png">
     <link rel="stylesheet" type="text/css" href="./styles.css" />
+     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 </head>
 <body>
-    <header>
+    <header class="header">
 
         <h1>WEB Solutions</h1>
 
-        <nav>
-            <a href="#">About Me</a>
-            <a href="#">Work</a>
-            <a href="#">Contact Me</a>
+        <nav class="nav">
+            <a href="#about-me">About Me</a>&nbsp&nbsp&nbsp
+            <a href="#work">Work</a>&nbsp&nbsp&nbsp
+            <a href="#contact-me">Contact Me</a>&nbsp&nbsp&nbsp
             <a href="#">Resume</a>
         </nav>
 
