added emoji into footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <footer>
-        <h3>Made with ❤️ by Mariia</h3>
+        <h3>Made with ❤️ and &#x1F967; by &nbsp &#129408;Mariia </h3>
         <p>
             &copy; 2021 WEB Solutions.
         </p>
