--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>WEB Solutions</h1>
 
         <nav class="nav">
-            <a href="#about-me">About Me</a>&nbsp&nbsp&nbsp
+            <a class="a" href="#about-me">About Me</a>&nbsp&nbsp&nbsp
             <a href="#work">Work</a>&nbsp&nbsp&nbsp
             <a href="#contact-me">Contact Me</a>&nbsp&nbsp&nbsp
             <a href="#">Resume</a>
@@ -24,44 +24,47 @@
 
 
     </header>
-    <section>
-        <h2>About Me</h2>
 
-    </section>
+    <main>
+        <section>
+            <h2>About Me</h2>
 
-    <section>
-        <h2>Work</h2>
+        </section>
 
-    </section>
+        <section>
+            <h2>Work</h2>
 
-    <section>
-        <h2>Contact Me</h2>
+        </section>
 
-        <ul>
+        <section>
+            <h2>Contact Me</h2>
 
-            <li>
+            <ul> 
+
+                <li>
                 206.539.6437
-            </li>
+                </li>
 
-            <li>
+                <li>
                 pirogova.mariia@gmail.com
-            </li>
+                </li>
 
-            <li>
+                <li>
                 <a href="https://github.com/MaryVPie" target="_blank">GitHub</a>
-            </li>
+                </li>
 
-            <li>
+                <li>
                 <a href="https://www.facebook.com/profile.php?id=100004283254961" target="_blank">Facebook</a>
-            </li>
+                </li>
 
-            <li>
+                <li>
                 <a href="https://open.spotify.com/user/31hodc7u4u5gitqxuz2vnoentj5y?si=669e49dafec54b0a" target="_blank">Spotify</a>
-            </li>
+                </li>
 
-        </ul>
+            </ul>
 
-    </section>
+        </section>
+    </main>
 
     <footer>
         <h3>Made with ❤️ and &#x1F967; by &nbsp &#129408;Mariia </h3>
