added basic styling in html and css files

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
             <h2>Contact Me</h2>
 
-            <ul> 
+            <ul class="nav"> 
 
                 <li>
                 206.539.6437
