added styles into nav bar

--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
 
         <h1>WEB Solutions</h1>
 
-        <nav class="nav">
-            <a class="a" href="#about-me">About Me</a>&nbsp&nbsp&nbsp
-            <a href="#work">Work</a>&nbsp&nbsp&nbsp
-            <a href="#contact-me">Contact Me</a>&nbsp&nbsp&nbsp
+        <nav class="nav" >
+            <a class="a" href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact-me">Contact Me</a>
             <a href="#">Resume</a>
         </nav>
 
 
     </header>
 
-    <main>
-        <section>
-            <h2>About Me</h2>
+    <main class="main" >
+        <section class="about-me">
+            <header>About Me</header>
 
         </section>
 
-        <section>
-            <h2>Work</h2>
+        <section class="work" class="head">
+            <header>Work</header>
 
         </section>
 
-        <section>
-            <h2>Contact Me</h2>
+        <section class="contact-me">
+            <header>Contact Me</header>
 
-            <ul class="nav"> 
+            <ul class="underline" > 
 
                 <li>
                 206.539.6437
@@ -49,15 +49,15 @@
                 pirogova.mariia@gmail.com
                 </li>
 
-                <li>
+                <li class="nav a">
                 <a href="https://github.com/MaryVPie" target="_blank">GitHub</a>
                 </li>
 
-                <li>
+                <li class="nav a">
                 <a href="https://www.facebook.com/profile.php?id=100004283254961" target="_blank">Facebook</a>
                 </li>
 
-                <li>
+                <li class="nav a">
                 <a href="https://open.spotify.com/user/31hodc7u4u5gitqxuz2vnoentj5y?si=669e49dafec54b0a" target="_blank">Spotify</a>
                 </li>
 
