--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My PORTFOLIO!</title>
     <link rel="shortcut icon" type="image/png" href="img/cherry_pie.png">
     <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 </head>
 
@@ -18,10 +18,10 @@
         <h1>WEB Solutions</h1>
 
         <nav class="nav">
-            <a class="a" href="#about-me">About Me</a>
+            <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
             <a href="#contact-me">Contact Me</a>
-            <a href="#">Resume</a>
+            <a target="_blank" href="resume.txt">Resume</a>
         </nav>
 
     </header>
@@ -33,7 +33,7 @@
     </figure>
 
     <main class="main">
-        <section class="about-me head row">
+        <section class="about-me head row" id="about-me">
             <article class="column limit-width-20pc header-style">
                 <header>About Me</header>
             </article>
@@ -49,7 +49,7 @@
             </article>
         </section>
 
-        <section class="work head row">
+        <section class="work head row" id="work">
             <article class="column limit-width-20pc header-style">
                 <!-- style="border-right: 2px solid rgb(141, 3, 3);" -->
                 <header class=" ">Work</header>
@@ -90,7 +90,7 @@
 
                 <div class="row">
                     <div class="column">
-                        <div class="card" style="width: 100%; margin-left: 10px;">
+                        <div class="card" style="width: 100%;">
                             <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
                                 style="width:50%"> -->
                             <div class="container">
@@ -104,7 +104,7 @@
                     </div>
 
                     <div class="column">
-                        <div class="card" style="width: 100%; margin-right: 10px;">
+                        <div class="card" style="width: 100%;">
                             <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
                                 style="width:50%"> -->
                             <div class="container">
@@ -119,7 +119,7 @@
 
                 <div class="row">
                     <div class="column">
-                        <div class="card" style="width: 100%; margin-left: 10px;">
+                        <div class="card" style="width: 100%;">
                             <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
                                     style="width:50%"> -->
                             <div class="container">
@@ -132,12 +132,12 @@
                         </div>
                     </div>
                     <div class="column">
-                        <div class="card" style="width: 100%; margin-right: 10px;">
+                        <div class="card" style="width: 100%;">
                             <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
                                     style="width:50%"> -->
                             <div class="container">
                                 <div class="banner-text">
-                                    <h4><b>Run Buddy</b></h4>
+                                    <h4><b><a href="https://google.com">Run Buddy</a></b></h4>
                                     <p>HTML/CSS</p>
                                 </div>
                             </div>
@@ -147,7 +147,7 @@
             </article>
         </section>
 
-        <section class="contact-me row">
+        <section class="contact-me row" id="contact-me">
             <article class="column head limit-width-20pc header-style">
                 <header>Contact Me</header>
             </article>
