--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     </header>
 
     <figure class="figimg">
-        <!-- <img src="img/pixels.jpg" 
-        alt="Under constraction sigh is on a keyboard" > -->
+        
         <h2><b>Some text here as a subtitle</b></h2>
     </figure>
 
@@ -51,36 +50,19 @@
 
         <section class="work head row" id="work">
             <article class="column limit-width-20pc header-style">
-                <!-- style="border-right: 2px solid rgb(141, 3, 3);" -->
+             
                 <header class=" ">Work</header>
             </article>
 
             <article class="column">
-                <!-- <div class="row">
-                    <div class="column" style="flex: 1 1 100%">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                            nisi ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                            esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-                            in
-                            culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                    </div>
-                </div> -->
                 <div class="row">
                     <div class="column">
                         <div class="card" style="width: 100%; padding: 15px;">
 
-                            <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
-                                style="width:100%"> -->
                             <div class="container-100">
                                 <div class="banner-text">
-                                    <h4><b>Surf Report</b></h4>
-                                    <p>MERN Stack</p>
+                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/us-voter-representatives/">US Representatives</a></b></h4>
+                                    <p>HTML/JQuery/Materialize</p>
                                 </div>
                             </div>
                         </div>
@@ -91,12 +73,10 @@
                 <div class="row">
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
-                                style="width:50%"> -->
                             <div class="container">
                                 <div class="banner-text">
-                                    <h4><b>LED Wall</b></h4>
-                                    <p>Node/IoT</p>
+                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/password-generator/Develop/index.html">Password Generator</a></b></h4>
+                                    <p>HTML/Javascript/CSS</p>
                                 </div>
 
                             </div>
@@ -105,12 +85,10 @@
 
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
-                                style="width:50%"> -->
                             <div class="container">
                                 <div class="banner-text">
-                                    <h4><b>Calculator</b></h4>
-                                    <p>React/Javascript/CSS</p>
+                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/planner/">Day Planner</a></b></h4>
+                                    <p>HTML/Javascript/CSS</p>
                                 </div>
                             </div>
                         </div>
@@ -120,12 +98,10 @@
                 <div class="row">
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
-                                    style="width:50%"> -->
                             <div class="container">
                                 <div class="banner-text">
-                                    <h4><b>Pastel Puzzels</b></h4>
-                                    <p>MERN Stack</p>
+                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/Quiz-game/">Quiz Game</a></b></h4>
+                                    <p>HTML/Javascript/CSS</p>
                                 </div>
 
                             </div>
@@ -133,11 +109,9 @@
                     </div>
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <!-- <img src="img/Which_programming_language_to_choose.original.png" alt="Avatar"
-                                    style="width:50%"> -->
                             <div class="container">
                                 <div class="banner-text">
-                                    <h4><b><a href="https://google.com">Run Buddy</a></b></h4>
+                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/homework-1-marketing-agency/">Sample Landing Page</a></b></h4>
                                     <p>HTML/CSS</p>
                                 </div>
                             </div>
