--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <div class="container">
+                            <div class="container" style="background-image: url('img/pasgen.PNG');">
                                 <div class="banner-text">
                                     <h4><b><a target="_blank" href="https://maryvpie.github.io/password-generator/Develop/index.html">Password Generator</a></b></h4>
                                     <p>HTML/Javascript/CSS</p>
@@ -85,7 +85,7 @@
 
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <div class="container">
+                            <div class="container" style="background-image: url('img/Planner.PNG');">
                                 <div class="banner-text">
                                     <h4><b><a target="_blank" href="https://maryvpie.github.io/planner/">Day Planner</a></b></h4>
                                     <p>HTML/Javascript/CSS</p>
@@ -98,7 +98,7 @@
                 <div class="row">
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <div class="container">
+                            <div class="container" style="background-image: url('img/quiz.PNG');">
                                 <div class="banner-text">
                                     <h4><b><a target="_blank" href="https://maryvpie.github.io/Quiz-game/">Quiz Game</a></b></h4>
                                     <p>HTML/Javascript/CSS</p>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="column">
                         <div class="card" style="width: 100%;">
-                            <div class="container">
+                            <div class="container" style="background-image: url('img/Horis.PNG');">
                                 <div class="banner-text">
                                     <h4><b><a target="_blank" href="https://maryvpie.github.io/homework-1-marketing-agency/">Sample Landing Page</a></b></h4>
                                     <p>HTML/CSS</p>
