--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     </header>
 
     <figure class="figimg">
-        
         <h2><b>Some text here as a subtitle</b></h2>
     </figure>
 
@@ -50,7 +49,6 @@
 
         <section class="work head row" id="work">
             <article class="column limit-width-20pc header-style">
-             
                 <header class=" ">Work</header>
             </article>
 
@@ -61,7 +59,9 @@
 
                             <div class="container-100">
                                 <div class="banner-text">
-                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/us-voter-representatives/">US Representatives</a></b></h4>
+                                    <h4><b><a target="_blank"
+                                                href="https://maryvpie.github.io/us-voter-representatives/">US
+                                                Representatives</a></b></h4>
                                     <p>HTML/JQuery/Materialize</p>
                                 </div>
                             </div>
@@ -75,10 +75,11 @@
                         <div class="card" style="width: 100%;">
                             <div class="container" style="background-image: url('img/pasgen.PNG');">
                                 <div class="banner-text">
-                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/password-generator/Develop/index.html">Password Generator</a></b></h4>
+                                    <h4><b><a target="_blank"
+                                                href="https://maryvpie.github.io/password-generator/Develop/index.html">Password
+                                                Generator</a></b></h4>
                                     <p>HTML/Javascript/CSS</p>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -87,7 +88,8 @@
                         <div class="card" style="width: 100%;">
                             <div class="container" style="background-image: url('img/Planner.PNG');">
                                 <div class="banner-text">
-                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/planner/">Day Planner</a></b></h4>
+                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/planner/">Day
+                                                Planner</a></b></h4>
                                     <p>HTML/Javascript/CSS</p>
                                 </div>
                             </div>
@@ -100,7 +102,8 @@
                         <div class="card" style="width: 100%;">
                             <div class="container" style="background-image: url('img/quiz.PNG');">
                                 <div class="banner-text">
-                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/Quiz-game/">Quiz Game</a></b></h4>
+                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/Quiz-game/">Quiz
+                                                Game</a></b></h4>
                                     <p>HTML/Javascript/CSS</p>
                                 </div>
 
@@ -111,7 +114,9 @@
                         <div class="card" style="width: 100%;">
                             <div class="container" style="background-image: url('img/Horis.PNG');">
                                 <div class="banner-text">
-                                    <h4><b><a target="_blank" href="https://maryvpie.github.io/homework-1-marketing-agency/">Sample Landing Page</a></b></h4>
+                                    <h4><b><a target="_blank"
+                                                href="https://maryvpie.github.io/homework-1-marketing-agency/">Sample
+                                                Landing Page</a></b></h4>
                                     <p>HTML/CSS</p>
                                 </div>
                             </div>
@@ -158,7 +163,6 @@
         <p>
             &copy; 2021 WEB Solutions.
         </p>
-
     </footer>
 
 
